feat: bulk operations
create, update and delete many items using the REST paths

- POST /create
- PUT /
- POST /delete
