# src/modelRouter.js
@@ -1,4 +1,4 @@
-import { Router, sendEtag, queryParser, bodyParser, cacheControl } from 'veloze'
+import { Router, sendEtag, queryParser, bodyParser, cacheControl, requestId } from 'veloze'
 import { ModelAdapter } from './ModelAdapter.js'
 import { camelToDash } from './utils/index.js'
 
@@ -13,6 +13,7 @@ import { camelToDash } from './utils/index.js'
  * @property {Handler|Handler[]} [find]
  * @property {Handler|Handler[]} [search]
  * @property {Handler|Handler[]} [deleteById]
+ * @property {Handler|Handler[]} [delete]
  */
 
 /**
@@ -49,7 +50,7 @@ export function modelRouter (options) {
   router.mountPath = `/${modelNameDashed}`
 
   router.use(
-    bodyParser(bodyParserOpts),
+    requestId({ setResponseHeader: true }),
     sendEtag(),
     (req, res, next) => {
       res.setHeader('content-type', 'application/json')
@@ -65,41 +66,44 @@ export function modelRouter (options) {
     }
   )
 
+  // --- single operations ---
+
   router.post('/',
     preHooks.create,
-    wrapAsync(async (req, res) => {
-      const payload = req.body
-      res.body = await modelAdapter.create(payload)
+    bodyParser(bodyParserOpts),
+    async (req, res) => {
+      res.body = await modelAdapter.create(req.body)
       res.statusCode = 201
-    }),
+    },
     postHooks.create
   )
 
   router.put('/:id',
     preHooks.update,
-    wrapAsync(async (req, res) => {
+    bodyParser(bodyParserOpts),
+    async (req, res) => {
       const payload = { ...req.body, id: req.params?.id }
       res.body = await modelAdapter.update(payload)
-    }),
+    },
     postHooks.update
   )
 
   // router.patch('/:id',
   //   preHooks.patch,
-  //   wrapAsync(async (req, res) => {
+  //   async (req, res) => {
   //     const payload = { ...req.body, id: req.params?.id }
   //     res.body = await modelAdapter.patch(payload)
-  //   }),
+  //   },
   //   postHooks.patch
   // )
 
   router.get('/:id',
     preHooks.findById,
     queryParser,
-    wrapAsync(async (req, res) => {
+    async (req, res) => {
       const id = req.params?.id
       res.body = await modelAdapter.findById(id)
-    }),
+    },
     cacheControl(),
     postHooks.findById
   )
@@ -107,43 +111,60 @@ export function modelRouter (options) {
   router.get('/',
     queryParser,
     preHooks.find,
-    wrapAsync(async (req, res) => {
+    async (req, res) => {
       res.body = await modelAdapter.findMany(req.query)
-    }),
+    },
     cacheControl(),
     postHooks.find
   )
 
+  router.delete('/:id',
+    preHooks.deleteById,
+    async (req, res) => {
+      const id = req.params?.id
+      await modelAdapter.deleteById(id)
+      res.statusCode = 204
+    },
+    postHooks.deleteById
+  )
+
+  // --- bulk operations ---
+
   const _search = [
-    preHooks.search,
-    wrapAsync(async (req, res) => {
+    preHooks.search || preHooks.find,
+    bodyParser(bodyParserOpts),
+    async (req, res) => {
       res.body = await modelAdapter.searchMany(req.body)
-    }),
+    },
     cacheControl(),
-    postHooks.search
+    postHooks.search || postHooks.find
   ]
 
   router.post('/search', ..._search)
   router.search('/', ..._search)
 
-  router.delete('/:id',
-    preHooks.deleteById,
-    wrapAsync(async (req, res) => {
-      const id = req.params?.id
-      await modelAdapter.deleteById(id)
-      res.statusCode = 204
-    }),
-    postHooks.deleteById
+  router.post('/create',
+    preHooks.create,
+    (req, res) => modelAdapter.createMany(req, res)
+    // there is no postHook available as we are in streaming mode
+  )
+
+  router.put('/',
+    preHooks.update,
+    (req, res) => modelAdapter.updateMany(req, res)
+    // there is no postHook available as we are in streaming mode
+  )
+
+  router.post('/delete',
+    preHooks.delete,
+    bodyParser(bodyParserOpts),
+    async (req, res) => {
+      res.body = await modelAdapter.deleteMany(req.body)
+    },
+    cacheControl(),
+    postHooks.delete
   )
 
   // console.dir(router.print(), { depth: null })
   return router
 }
-
-const wrapAsync = (promFn) => (req, res, next) =>
-  promFn(req, res)
-    .then(() => {
-      // @ts-ignore
-      if (!req.writableEnded) next()
-    })
-    .catch((/** @type {any} */ err) => next(err))
